@@ -10,6 +10,7 @@ import springfox.documentation.spring.web.plugins.WebMvcRequestHandlerProvider;
 
 import java.lang.reflect.Field;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * @Auther: _GhostBoy
@@ -31,7 +32,7 @@ public class SwaggerBeanPostProcessor implements BeanPostProcessor {
     private <T extends RequestMappingInfoHandlerMapping> void customizeSpringfoxHandlerMappings(List<T> mappings) {
         List<T> copy = mappings.stream()
                 .filter(mapping -> mapping.getPatternParser() == null)
-                .toList();
+                .collect(Collectors.toList());
         mappings.clear();
         mappings.addAll(copy);
     }
